--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,5 @@ plotly==5.18.0
 dash==2.14.2
 dash-bootstrap-components==1.5.0
 Frozen-Flask==0.18
-gunicorn 
+gunicorn==23.0.0
+flask-cors==4.0.0 
