Add data sources and update environment configuration

--- a/.env
+++ b/.env
@@ -1,8 +1,1 @@
-# OpenWeatherMap API Key
-# IMPORTANT: Replace this with your actual API key from https://openweathermap.org/api
-# Sign up for a free account, then go to your account dashboard -> API keys
-# The current key is invalid or expired. Please get a new one.
-OPENWEATHER_API_KEY=aaca33348fcfa34c64f7f504141699ff
-
-# Optional: IBM Quantum API Key (if you want to use real quantum hardware)
-# IBMQ_API_KEY=your_ibmq_api_key_here
+﻿OPENWEATHERMAP_API_KEY=81e8b6ae8c17af9e5750586dfbe4a04b
