--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
+# Core quantum computing libraries
 qiskit==0.45.1
+qiskit-terra==0.45.1
 pennylane==0.34.0
+pennylane-lightning==0.36.0
+
+# Data science and ML
 numpy==1.24.3
 pandas==2.0.3
-requests==2.31.0
-flask==2.3.3
-python-dotenv==1.0.0
 scikit-learn==1.3.0
-geopy==2.3.0
+scipy==1.15.2
+
+# Web framework
+flask==2.3.3
+dash==2.14.2
+dash-bootstrap-components==1.5.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+flask-cors==4.0.0
+
+# HTTP and API
+requests==2.31.0
+urllib3==2.0.4
+
+# Environment and utilities
+python-dotenv==1.0.0
 Werkzeug==2.3.7
 click==8.1.7
 itsdangerous==2.1.2
@@ -14,11 +32,50 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 certifi==2023.7.22
 charset-normalizer==3.2.0
-idna==3.4
-urllib3==2.0.4
+idna==3.4.0
+
+# Visualization
 plotly==5.18.0
-dash==2.14.2
-dash-bootstrap-components==1.5.0
+
+# Geocoding
+geopy==2.3.0
+geographiclib==2.0
+
+# Deployment
 Frozen-Flask==0.18
 gunicorn==23.0.0
-flask-cors==4.0.0 
+
+# Additional dependencies
+ansi2html==1.9.2
+appdirs==1.4.4
+autograd==1.7.0
+autoray==0.7.1
+blinker==1.9.0
+cachetools==5.5.2
+colorama==0.4.6
+dill==0.4.0
+importlib_metadata==8.7.0
+joblib==1.4.2
+mpmath==1.3.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+packaging==25.0
+pbr==6.1.1
+pip==22.3.1
+ply==3.11
+psutil==7.0.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+retrying==1.3.4
+rustworkx==0.16.0
+semantic-version==2.10.0
+setuptools==65.5.0
+six==1.17.0
+stevedore==5.4.1
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+toml==0.10.2
+typing_extensions==4.13.2
+tzdata==2025.2
+zipp==3.21.0 
