--- a/amplify.yml
+++ b/amplify.yml
@@ -1,19 +1,20 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - echo "Installing frontend dependencies..."
-        - cd frontend
-        - npm ci
-    build:
-      commands:
-        - echo "Building frontend application..."
-        - npm run build
-  artifacts:
-    baseDirectory: frontend/dist
-    files:
-      - "**/*"
-  cache:
-    paths:
-      - frontend/node_modules/**/*
+applications:
+  - appRoot: frontend
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - echo "Building frontend application..."
+            - npm ci
+        build:
+          commands:
+            - echo "Building frontend application..."
+            - npm run build
+      artifacts:
+        baseDirectory: dist
+        files:
+          - "**/*"
+      cache:
+        paths:
+          - node_modules/**/*
