Switch Amplify build spec to version 0.2 (disable monorepo mode)

--- a/amplify.yml
+++ b/amplify.yml
@@ -1,20 +1,21 @@
-version: 1
-applications:
-  - appRoot: frontend
-    frontend:
-      phases:
-        preBuild:
-          commands:
-            - echo "Building frontend application..."
-            - npm ci
-        build:
-          commands:
-            - echo "Building frontend application..."
-            - npm run build
-      artifacts:
-        baseDirectory: dist
-        files:
-          - "**/*"
-      cache:
-        paths:
-          - node_modules/**/*
+version: 0.2
+phases:
+  install:
+    runtime-versions:
+      nodejs: 18
+  pre_build:
+    commands:
+      - echo "Installing frontend dependencies..."
+      - cd frontend
+      - npm ci
+  build:
+    commands:
+      - echo "Building frontend application..."
+      - npm run build
+artifacts:
+  base-directory: frontend/dist
+  files:
+    - "**/*"
+cache:
+  paths:
+    - frontend/node_modules/**/*
