--- a/amplify.yml
+++ b/amplify.yml
@@ -1,22 +1,21 @@
-version: 1.0
-frontend:
-  phases:
-    install:
-      runtime-versions:
-        nodejs: 18
-    preBuild:
-      commands:
-        - echo "Installing frontend dependencies..."
-        - cd frontend
-        - npm ci
-    build:
-      commands:
-        - echo "Building frontend application..."
-        - npm run build
-  artifacts:
-    baseDirectory: frontend/dist
-    files:
-      - "**/*"
-  cache:
-    paths:
-      - frontend/node_modules/**/*
+version: 0.2
+phases:
+  install:
+    runtime-versions:
+      nodejs: 20
+  pre_build:
+    commands:
+      - echo "Installing frontend dependencies..."
+      - cd frontend
+      - npm ci
+  build:
+    commands:
+      - echo "Building frontend application..."
+      - npm run build
+artifacts:
+  base-directory: frontend/dist
+  files:
+    - "**/*"
+cache:
+  paths:
+    - frontend/node_modules/**/*
