--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,5 @@
-# Use Node.js 20 Alpine for better compatibility
-FROM node:20-alpine
+# Simple Node.js setup for local development
+FROM node:20
 
 # Set working directory
 WORKDIR /app
@@ -7,14 +7,14 @@ WORKDIR /app
 # Copy package files
 COPY frontend/package*.json ./
 
-# Install dependencies
+# Install all dependencies (including devDependencies)
 RUN npm install
 
 # Copy source code
 COPY frontend/ .
 
-# Expose port
+# Expose port for Vite
 EXPOSE 5173
 
-# Start development server (can be overridden in docker-compose)
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"] 
+# Start development server
+CMD ["npm", "run", "dev"] 
