--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,17 +4,18 @@ FROM node:20
 # Set working directory
 WORKDIR /app
 
-# Copy package files
+# Copy package files first
 COPY frontend/package*.json ./
 
-# Install all dependencies (including devDependencies)
-RUN npm install
+# Clear npm cache and install dependencies
+RUN npm cache clean --force && \
+    npm install --no-optional --production=false
 
-# Copy source code
+# Copy the rest of the application
 COPY frontend/ .
 
-# Expose port for Vite
+# Expose port
 EXPOSE 5173
 
-# Start development server
+# Start the development server
 CMD ["npm", "run", "dev"] 
