--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,5 +1,11 @@
-platform=linux
-arch=x64
-target_platform=linux
-target_arch=x64
-target_libc=glibc 
+# Ensure consistent dependency resolution
+legacy-peer-deps=true
+strict-peer-dependencies=false
+auto-install-peers=true
+
+# Cache settings
+cache=.npm-cache
+prefer-offline=false
+
+# Registry settings
+registry=https://registry.npmjs.org/ 
